# geo_gazer

./: .gitignore  Cargo.toml  main.rs  screen_resolution.rs
.github/workflows/: ci.yml
