[package]
name = "geo_gazer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
image = "0.23"
clap = "3.0"
raw-window-handle = "0.3.3"
winit = "0.24"

[[bin]]
name = "geo_gazer"
path = "main.rs"
